# dmx-adapter

./: .gitignore  Cargo.toml  README.md  build.sh  manifest.json  package.sh
.github/workflows/: build.yml  release.yml
src/: adapter.rs  config.rs  descriptions.rs  device.rs  device_handler.rs  main.rs  player.rs  property.rs  rgb_property.rs
src/api/: adapter.rs  api_error.rs  client.rs  database.rs  device.rs  message.rs  mod.rs  plugin.rs  property.rs
