[package]
name = "dmx-adapter"
version = "0.1.3"
authors = ["tim"]
edition = "2018"

[dependencies]
url = "2.1.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
tungstenite = "0.11.0"
dirs = "3.0.1"
sqlite = "0.25.3"
uuid = { version = "0.8.1", features = ["v4"] }
dmx = "0.2.1"
dmx-serial = "0.4.0"
webthings-gateway-ipc-types = "1.0.0-alpha.2"
