[package]
name = "dmx-adapter"
version = "0.1.3"
authors = ["tim"]
edition = "2018"

[dependencies]
url = "2.2.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tungstenite = "0.14.0"
tokio-tungstenite = "0.15.0"
dirs = "3.0.2"
sqlite = "0.26.0"
uuid = { version = "0.8.2", features = ["v4"] }
dmx = "0.2.1"
dmx-serial = "0.4.0"
webthings-gateway-ipc-types = "1.0.0-alpha.2"
futures = "0.3.15"
tokio = { version = "1.0.0", features = ["macros", "rt-multi-thread"] }
